--- a/index.html
+++ b/index.html
@@ -12,17 +12,43 @@
         .two {
             text-decoration: line-through;
         }
+        .canvas {
+            width: 300px;
+            height: 300px;
+            margin-top: 20px;
+            background: #ddd;
+        }
     </style>
 </head>
 <body>
     <h1>Vue Basics</h1>
     <div id="app">
         <h2>{{ title }}</h2>
-        <p>I earn {{ wage }} pounds per hour</p>
-        <button v-on:click="changeWage(1)">Increase wage by £1</button>
+        <ul>
+            <li v-for="item in items">{{item}}</li>
+        </ul>
+
+        <div v-for="(ninja, index) in ninjas">
+            <p>{{index}} - {{ ninja.name }}</p>
+            <p>age: {{ninja.age}}</p>
+            <p>belt colour: {{ninja.belt}}</p>
+        </div>
+        <!-- <p>My Name is {{name}}</p> -->
+        <!-- <p v-if="showName">Mario</p> -->
+        <!-- <p v-else-if="showAge">25</p> -->
+        <!-- <button @click="toggleName">ShowName: {{showName}}</button> -->
+        <!-- <button @click="toggleAge">ShowAge: {{showAge}}</button> -->
+        <!-- <button @click.alt="logMessage">alt-click me</button> -->
+        <!-- <button @click.shift="logMessage">shift-click me</button> -->
+        <!-- <a href="http://www.google.com" @click.prevent="logMessage">Google</a> -->
+        <!-- <input type="text" v-model="name"> -->
+        <!-- <button @click="logEvent">Log Event Info</button> -->
+        <!-- <div class="canvas" @mousemove="logCoords">{{ coords.x}}, {{ coords.y}}</div> -->
+        <!-- <p>I earn {{ wage }} pounds per hour</p> -->
+        <!-- <button v-on:click="changeWage(1)">Increase wage by £1</button>
         <button v-on:click="changeWage(-1)">Decrease wage by £1</button>
         <button v-on:dblclick="changeWage(5)">Increase wage by £5</button>
-        <button v-on:dblclick="changeWage(-5)">Decrease wage by £5</button>
+        <button v-on:dblclick="changeWage(-5)">Decrease wage by £5</button> -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="app.js"></script>
